--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pandas>=1.3.0",
     "shapely>=1.8.0",
     "typing-extensions>=4.0.0",
+    "fastparquet>=2023.03.0",
 ]
 
 [project.optional-dependencies]
